--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="header-main">
-  <a class="header__logo" routerLink="/">
-    <img src="/assets/svg/logo.svg" alt="notesy">
-  </a>
-  <div>
+  <div class="header-container">
+    <a class="header__logo" routerLink="/">
+      <img alt="notesy" src="/assets/svg/logo.svg">
+    </a>
     <button [matMenuTriggerFor]="menu" class="header__button" mat-button>
-      <img src="/assets/svg/user-pic.svg" alt="profile" class="header__profile-pic">
+      <img alt="profile" class="header__profile-pic" src="/assets/svg/user-pic.svg">
       <div *ngIf="(currentUser$ | async)" class="header__profile-name">{{(currentUser$ | async).name}}</div>
     </button>
   </div>
