--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,49 +1,62 @@
 @import "../../styles/base";
 
 .header-main {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1000;
   background: $mainColor;
   color: white;
+  width: 100%;
   height: 75px;
   display: flex;
-  flex-flow: row;
-  justify-content: space-between;
+  flex-flow: column;
+  justify-content: center;
   align-items: center;
-  padding: 10px 5%;
 
-  .header__logo {
-    text-decoration: none;
-    color: white;
-  }
+  .header-container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1920px;
 
-  .header__button {
-    border: 1.5px solid white;
-    border-radius: 30px;
-    color: white;
-    font-size: 14px;
-    padding: 0;
-    height: 45px;
-    min-width: 45px;
-
-    @include tabletV {
-     padding: 0 4px;
+    .header__logo {
+      text-decoration: none;
+      color: white;
     }
 
-    ::ng-deep .mdc-button__label {
-      display: flex;
-      flex-flow: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .header__profile-pic {
-    }
-
-    .header__profile-name {
-      display: none;
+    .header__button {
+      border: 1.5px solid white;
+      border-radius: 30px;
+      color: white;
+      font-size: 14px;
+      padding: 0;
+      height: 45px;
+      min-width: 45px;
 
       @include tabletV {
-        display: initial;
-        margin-left: 10px;
+        padding: 0 4px;
+      }
+
+      ::ng-deep .mdc-button__label {
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .header__profile-pic {
+      }
+
+      .header__profile-name {
+        display: none;
+
+        @include tabletV {
+          display: initial;
+          margin-left: 10px;
+        }
       }
     }
   }
