--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -5,7 +5,7 @@
     <div class="notes-actions">
       <div class="notes-actions__filters">
         <mat-form-field class="action__filter">
-          <mat-label>User:</mat-label>
+          <mat-label>Author:</mat-label>
           <mat-select [formControl]="userIdFormControl">
             <mat-option [value]="null" ngDefaultControl>
               ALL
