feat(app:shared:components:not-found): update page 404

--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<h1>PAGE NOT FOUND</h1>
+<div class="not-found-main base-wrapper">
+  <div class="not-found-container">
+    <h1 class="not-found__title">PAGE NOT FOUND</h1>
+    <button mat-button class="not-found__button" routerLink="/notes">Return to main page</button>
+  </div>
+</div>
+
